manifests/service/auth/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-redirect
  namespace: service
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: service
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: service-auth-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: auth.liberte.top
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 3333
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-web
                port:
                  number: 8888
  tls:
    - secretName: auth-tls
      hosts:
        - auth.liberte.top
